manifests/1-kuma.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-infra
  labels:
    kuma.io/sidecar-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-c-infra
  labels:
    kuma.io/sidecar-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    kuma.io/sidecar-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
  labels:
    kuma.io/sidecar-injection: enabled
