manifests/3-routes-failed.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: team-b-failed-route
  namespace: team-b
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: dedicated-team-c-gw # attaching to this Gateway should fail due it only accepting Routes in the same namespace
    namespace: team-c-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /team-b-failed
    backendRefs:
    - kind: Service
      name: team-b-failed-app
      port: 80
