manifests/3-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: team-a-route
  namespace: team-a
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gw
    namespace: shared-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /team-a
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: X-Request-From
          value: Gateway-API-Demo
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /api
    backendRefs:
    - kind: Service
      name: team-a-app-v1
      port: 80
      weight: 80
    - kind: Service
      name: team-a-app-v2
      port: 80
      weight: 20
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: team-b-route
  namespace: team-b
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gw
    namespace: shared-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /team-b
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: X-Request-From
          value: Gateway-API-Demo
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /api
    backendRefs:
    - kind: Service
      name: team-b-app-v1
      port: 80
      weight: 80
    - kind: Service
      name: team-b-app-v2
      port: 80
      weight: 20
